--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <div id="chat_container"></div>
 
     <form>
-      <textarea name="travelLocation" row="1" cols="1" placeholder="Enter Destination (city, state/country) EX: Atlanta, Georgia"></textarea>
+      <textarea name="travelLocation" row="1" cols="1" placeholder="Enter Destination (city, state/country) EX: Athens, Georgia"></textarea>
       <textarea name = "arrivalDate" row="1" cols="1" placeholder="What day do you arrive at the destination? EX: February 23, 2023"></textarea>
       <textarea name="tripLength" rows="1" cols="1" placeholder="How long (number of days) is your trip? (including travel days) Enter a single whole number."></textarea>
       <textarea name="arrivalTime" rows="1" cols="1" placeholder="When do you arrive at the destination? (In the local time of your destination) EX: 4:00 PM"></textarea>
